Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-29333

Bucket is not allowed to go into DGM when docs of size >= 1MB are loaded

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 5.5.0
    • 5.5.0
    • couchbase-bucket
    • None
    • Enterprise Edition 5.5.0 build 2520

    Description

      Script to Repro

      ./testrunner -i /tmp/win10-bucket-ops.ini -p  -t eventing.eventing_dataset.EventingDataset.test_eventing_with_large_doc_size,nodes_init=4,services_init=kv-eventing-index-n1ql,dataset=default,groups=simple,reset_services=True,skip_cleanup=True,document_size=1024000,doc-per-day=10
      

      Error
      Data loading fails with "Memcached error #134 'Temporary failure': for vbucket :545 to mc 172.23.98.195:11210"

      Setup
      4 node cluster - kv-eventing-index-n1ql
      Bucket name : src_bucket
      Bucket size : 100MB
      Doc size : Start failing after loading 72 docs of 1MB or 36 docs of 2MB exactly every single time with above mentioned error.

      See

      I tried running on the older builds to figure out when this stopped working. I can confirm that it works fine on Enterprise Edition 5.5.0 build 2036 on the same setup. I have attached logs from both the runs below.

      See

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-29333
          # Subject Branch Project Status CR V

          Activity

            People

              Balakumaran.Gopal Balakumaran Gopal
              Balakumaran.Gopal Balakumaran Gopal
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty