engines/ep/src/item_pager.cc
@@ -54,11 +54,11 @@ PagingVisitor::PagingVisitor(KVBucket& s,
                              std::atomic<item_pager_phase>* phase,
                              bool _isEphemeral)
     : VBucketVisitor(vbFilter),
+      ejected(0),
       store(s),
       stats(st),
       percent(pcnt),
       activeBias(bias),
-      ejected(0),
       startTime(ep_real_time()),
       stateFinalizer(sfin),
       owner(caller),
@@ -113,6 +113,8 @@ PagingVisitor::PagingVisitor(KVBucket& s,
              * add it to the histogram we want to use the original value.
              */
             auto storedValueFreqCounter = v.getFreqCounterValue();
+            bool evicted = true;
+
             if (storedValueFreqCounter <= freqCounterThreshold) {
                 /*
                  * If the storedValue is eligible for eviction then add its
@@ -127,15 +129,27 @@ PagingVisitor::PagingVisitor(KVBucket& s,
                  */
                 if (!doEviction(lh, &v)) {
                     storedValueFreqCounter = std::numeric_limits<uint8_t>::max();
+                    evicted = false;
                 }
             } else {
                 // If the storedValue is NOT eligible for eviction then
                 // we want to add the maximum value (255).
                 if (!currentBucket->eligibleToPageOut(lh, v)) {
                     storedValueFreqCounter = std::numeric_limits<uint8_t>::max();
+                    evicted = false;
                 }
             }
             itemEviction.addValueToFreqHistogram(storedValueFreqCounter);
+
+            /*
+             * MB-29333 - For items that we have visited but not evicted the
+             * storedValue frequency counter must be decayed by 1 to ensure
+             * that an item will get evicted if it is repeatedly visited (and
+             * is eligible to be evicted).
+             */
+            if (!evicted && storedValueFreqCounter > 0) {
+                v.setFreqCounterValue(storedValueFreqCounter - 1);
+            }
 
             // Whilst we are learning it is worth always updating the
             // threshold. We also want to update the threshold at periodic
